Match-id-e483b57eb56fb54f2c11bf3d2a091ee5c2ccb0f1

--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -167,6 +167,16 @@
         - basic_only
       with_items: "{{ groups['inference_node'] }}"
 
+    - name: Label A300I PRO nodes
+      shell:
+        cmd:
+          unset http_proxy https_proxy;
+          kubectl label nodes {{ item }} accelerator=huawei-Ascend710 --overwrite=true;
+      tags:
+        - init-workers
+        - basic_only
+      with_items: "{{ groups['A300I_PRO_node'] }}"
+
     - name: Label A300T nodes
       shell:
         cmd:
