--- a/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_deploy_service.yaml
@@ -102,7 +102,8 @@
         chdir: "{{ deploy_yaml_dir }}"
         cmd:
           kubectl apply -f ascendplugin-volcano*.yaml;
-          kubectl apply -f ascendplugin-310*.yaml
+          kubectl apply -f ascendplugin-310*.yaml;
+          kubectl apply -f ascendplugin-710*.yaml
 
     - name: Deploy cadvisor
       shell:
