Match-id-7d624bff96d65bdff2760b9af17694db3c7a1eba

--- a/mindx-dl/deploy/offline/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/offline/steps/set_global_env.yaml
@@ -22,7 +22,7 @@
     - name: Get valid hostname
       shell:
         cmd:
-          hostname | grep -E '^[a-z0-9]' | grep -E '[a-z0-9]$' | tr -d '[a-z0-9-]'
+          hostname | grep -E '^[a-z0-9]' | grep -E '[a-z0-9]$' | tr -d 'a-z0-9-'
       register: result
 
     - name: Check hostname
