Match-id-31c0d48ac55026110469708c8357babbd4a26f49

--- a/mindx-dl/upgrade/upgrade.yaml
+++ b/mindx-dl/upgrade/upgrade.yaml
@@ -165,6 +165,7 @@
           docker rmi {{ vA }}
           docker rmi {{ vC }}
           docker rmi {{ vS }}
+          docker rmi  $(docker images |grep webhook-manager-base|awk '{print $3}')
       ignore_errors: True
       tags: remove-images
 
