Match-id-d30cc52caa81d32faff9bd7188c5d58ef0d065cf

--- a/mindx-dl/upgrade/upgrade.yaml
+++ b/mindx-dl/upgrade/upgrade.yaml
@@ -162,10 +162,10 @@
     - name: Remove volcano images
       shell:
         cmd:
-          docker rmi {{ vA }}
-          docker rmi {{ vC }}
-          docker rmi {{ vS }}
-          docker rmi  $(docker images |grep webhook-manager-base|awk '{print $3}')
+          docker rmi {{ vA }};
+          docker rmi {{ vC }};
+          docker rmi {{ vS }};
+          docker rmi  $(docker images |grep vc-webhook-manager-base|awk '{print $3}');
       ignore_errors: True
       tags: remove-images
 
