Match-id-c071727a6a9b062d293a4e5484587613161dc79d

--- a/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
@@ -149,7 +149,9 @@
       shell:
         chdir: "{{ dls_root_dir }}/base_software/"
         cmd:
-          dpkg -i docker-ce_18.06.3*
+          dpkg -i containerd.io*;
+          dpkg -i docker-ce-cli_*;
+          dpkg -i docker-ce_*
       when:
         - ansible_distribution == 'Ubuntu'
       tags: docker
